[gd_scene load_steps=5 format=2]

[ext_resource path="res://GhostWorld.gd" type="Script" id=1]
[ext_resource path="res://scene/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/Ghost.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI.tscn" type="PackedScene" id=4]

[node name="GhostWorld" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 380, 277 )

[node name="Enemies" type="Node2D" parent="."]
position = Vector2( 380, 277 )

[node name="Ghost01" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( -235, -94 )
ghost_area = 100

[node name="Ghost02" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( -144, 176 )
ghost_area = 75

[node name="Ghost03" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 226, -50 )
ghost_area = 100

[node name="Ghost04" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 389, -143 )
ghost_area = 100

[node name="Ghost05" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( -53, -131 )
ghost_area = 100

[node name="Ghost06" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 38, 139 )
ghost_area = 75

[node name="Ghost07" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 436, 66 )
ghost_area = 100

[node name="Ghost08" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 278, 225 )
ghost_area = 100

[node name="Overlay" type="CanvasLayer" parent="."]

[node name="UI" parent="Overlay" instance=ExtResource( 4 )]

[connection signal="mana_depleted" from="Player" to="." method="_on_Player_mana_depleted"]
[connection signal="possession_released" from="Player" to="." method="_on_Player_possession_released"]
[connection signal="possession_requested" from="Player" to="." method="_on_Player_possession_requested"]
